--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<div id="container" style="width:2956px;margin:15px auto 15px auto;">
 				<img id="picture" src="1.png" id="picture" width="3425" style="border:1px solid blue;" usemap="#map"/>
 				<map name="map" id="map">	
-					<area alt="1F215" title="1F215" href="https://www.kickstarter.com/profile/microartstudio/created">
+					<area alt="1F215" title="Micro Art Studio" href="https://www.kickstarter.com/profile/microartstudio/created" coords="1006,399,1098,491" shape="rect">
 					<area alt="Hall 2" title="Hall 2" href="Hall 2" coords="628,918,983,1048" shape="rect">
   					<area alt="Hall 3" title="Hall 3" href="Hall 3" coords="152,1155,510,1285" shape="rect">
   					<area alt="Hall 4" title="Hall 4" href="Hall 4" coords="627,1157,983,1286" shape="rect">
