--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </head>
 	<body style="text-align:center;background-color:#eff0f2;font:12px Verdana;">
 					<p style="font-size:20px;"></p>
-			<div id="container" style="width:2956px;margin:15px auto 15px auto;">
+			<div id="container" style="max-width:100%; height:auto; margin:15px auto 15px auto;">
 				<img id="picture" src="1.png" id="picture" width="3425" style="border:1px solid blue;" usemap="#map"/>
 				<map name="map" id="map">	
 					<area alt="1F215" title="Micro Art Studio" href="https://www.kickstarter.com/profile/microartstudio/created" coords="1006,399,1098,491" shape="rect">
