--- a/index.html
+++ b/index.html
@@ -111,10 +111,15 @@
 			<div id="container" style="max-width:100%; height:auto; margin:15px auto 15px auto;">
 				<img id="picture" src="1.png" id="picture" width="3425" style="border:1px solid blue;" usemap="#map"/>
 				<map name="map" id="map">	
-					<area alt="1F215" title="Micro Art Studio" href="https://www.kickstarter.com/profile/microartstudio/created" coords="1006,399,1098,491" shape="rect">
-					<area alt="Hall 2" title="Hall 2" href="Hall 2" coords="628,918,983,1048" shape="rect">
-  					<area alt="Hall 3" title="Hall 3" href="Hall 3" coords="152,1155,510,1285" shape="rect">
-  					<area alt="Hall 4" title="Hall 4" href="Hall 4" coords="627,1157,983,1286" shape="rect">
+					<area alt="Micro Art Studio" title="Micro Art Studio" href="https://www.kickstarter.com/profile/microartstudio/created" coords="1006,399,1098,491" shape="rect">
+					<area alt="De Tinnen Roos" title="De Tinnen Roos" href="https://www.kickstarter.com/projects/247917105/twisting-chess-chess-with-a-twist" coords="407,249,480,395" shape="rect">
+  					<area alt="Minis For War" title="Minis For War" href="https://manulao.github.io/ksrspiel0" coords="384,403,484,464" shape="rect">
+  					<area alt="Standi Sarl" title="Standi Sarl" href="https://manulao.github.io/ksrspiel0" coords="580,273,672,345" shape="rect">
+					<area alt="Lorescape" title="Lorescape" href="https://manulao.github.io/ksrspiel0" coords="676,284,764,342" shape="rect">
+					<area alt="Warlord Games" title="Warlord Games" href="https://www.kickstarter.com/profile/warlordgames/created" coords="841,269,917,349" shape="rect">
+					<area alt="I Built it" title="I Built it" href="https://www.kickstarter.com/profile/ibuiltit/created" coords="921,107,994,177" shape="rect">
+					<area alt="Goblin Gaming" title="Goblin Gaming" href="https://manulao.github.io/ksrspiel0" coords="994,104,1067,173" shape="rect">
+					<area alt="Gravity Bay" title="Gravity Bay" href="https://www.kickstarter.com/profile/gravitybay/created" coords="1144,100,1151,104" shape="rect">
   					<area alt="Hall 5" title="Hall 5" href="Hall 5" coords="154,1390,510,1521" shape="rect">
   					<area alt="Hall 6" title="Hall 6" href="Hall 6" coords="627,1393,983,1523" shape="rect">
 					
