--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
 				color:blue;
 				text-decoration: underline;
 			}
+		/* Estilos para el pop-up */
+        	#popup {
+            	display: none;
+            	position: fixed;
+            	top: 50%;
+            	left: 50%;
+            	transform: translate(-50%, -50%);
+            	background-color: white;
+            	padding: 20px;
+            	border: 1px solid black;
+            	z-index: 10;
+        	}
+
+        	/* Fondo oscuro cuando el pop-up esté visible */
+        	#overlay {
+            	display: none;
+            	position: fixed;
+            	top: 0;
+            	left: 0;
+            	width: 100%;
+            	height: 100%;
+            	background-color: rgba(0, 0, 0, 0.7);
+            	z-index: 9;
+        	}
 	</style>
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="jquery.imagemapster.min.js"></script>
@@ -103,11 +127,28 @@
 			}, 500, function() {});
 			$('img').mapster('resize',width,height,500);
 		}
+		<!-- Pop-up -->
+    		<div id="overlay" onclick="ocultarPopup()"></div>
+    		<div id="popup">
+        		<span id="popup-texto"></span>
+    		</div>
 		
 			</script>
 </head>
 	<body style="text-align:center;background-color:#eff0f2;font:12px Verdana;">
 					<p style="font-size:20px;"></p>
+		// Función para mostrar el pop-up con el texto correspondiente
+        	function mostrarPopup(texto) {
+            	document.getElementById('popup-texto').textContent = texto;
+            	document.getElementById('popup').style.display = 'block';
+            	document.getElementById('overlay').style.display = 'block';
+        	}
+
+        	// Función para ocultar el pop-up
+        	function ocultarPopup() {
+            	document.getElementById('popup').style.display = 'none';
+            	document.getElementById('overlay').style.display = 'none';
+        	}
 			<div id="container" style="max-width:100%; height:auto; margin:15px auto 15px auto;">
 				<img id="picture" src="1.png" id="picture" width="3425" style="border:1px solid blue;" usemap="#map"/>
 				<map name="map" id="map">	
