--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<map name="map" id="map">	
 					<area alt="Micro Art Studio" title="Micro Art Studio" href="https://www.kickstarter.com/profile/microartstudio/created" coords="1006,399,1098,491" shape="rect">
 					<area alt="De Tinnen Roos" title="De Tinnen Roos" href="https://www.kickstarter.com/projects/247917105/twisting-chess-chess-with-a-twist" coords="407,249,480,395" shape="rect">
-  					<area alt="Minis For War" title="Minis For War" href="https://manulao.github.io/ksrspiel0" coords="384,403,484,464" shape="rect">
+  					<area alt="Minis For War" title="Minis For War" href="javascript:void(0)" coords="384,403,484,464" shape="rect" onclick="mostrarPopup('No results found')>
   					<area alt="Standi Sarl" title="Standi Sarl" href="https://manulao.github.io/ksrspiel0" coords="580,273,672,345" shape="rect">
 					<area alt="Lorescape" title="Lorescape" href="https://manulao.github.io/ksrspiel0" coords="676,284,764,342" shape="rect">
 					<area alt="Warlord Games" title="Warlord Games" href="https://www.kickstarter.com/profile/warlordgames/created" coords="841,269,917,349" shape="rect">
