--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta charset="utf-8"/>
 	<meta name="theme-color" content="#ffffff">
 	<meta name="viewport" content="width=device-width"/>
-	<title>Kickstarter Spiel</title>
+	<title>Kickstarter Essen Spiel Hall 1</title>
+	<link rel="stylesheet" href="styles.css"> <!-- Conexión con el archivo CSS -->
 	<style>
 		.tooltip {
 			border:2px solid #f7eed7;
