--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<script src="scripts.js"></script>
 			
 			<p style="font-size:20px;"></p>
-			<img id="picture" src="1.png" id="picture" width="3425" style="border:1px solid blue;" usemap="#map"/>
+			<img id="picture" src="Hall 1.png" id="picture" width="3425" style="border:1px solid blue;" usemap="#map"/>
 				<map name="map" id="map">	
 					<area alt="Micro Art Studio" title="Micro Art Studio" href="https://www.kickstarter.com/profile/microartstudio/created" coords="1006,399,1098,491" shape="rect">
 					<area alt="De Tinnen Roos" title="De Tinnen Roos" href="https://www.kickstarter.com/projects/247917105/twisting-chess-chess-with-a-twist" coords="407,249,480,395" shape="rect">
