--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
   					<area alt="Minis For War" title="Minis For War" href="javascript:void(0)" onclick="mostrarPopup('No results found')" coords="384,403,484,464" shape="rect">
 					<area alt="Standi Sarl" title="Standi Sarl" href="javascript:void(0)" onclick="mostrarPopup('No results found')" coords="576,273,672,342" shape="rect">
   					<area alt="Lorescape" title="Lorescape" href="javascript:void(0)" onclick="mostrarPopup('No results found')" coords="676,284,764,342" shape="rect">
+					<area alt="Wolff Designa" title="Wolff Designa" href="https://www.kickstarter.com/profile/wolffdesigna/created" coords="772,269,837,342" shape="rect">
 					<area alt="Warlord Games" title="Warlord Games" href="https://www.kickstarter.com/profile/warlordgames/created" coords="841,269,917,349" shape="rect">
 					<area alt="I built it" title="I built it" href="https://www.kickstarter.com/profile/ibuiltit/created" coords="914,273,990,342" shape="rect">
 					<area alt="Goblin Gaming" title="Goblin Gaming" href="javascript:void(0)" onclick="mostrarPopup('No results found')" coords="994,269,1067,342" shape="rect">
